Fix the active state and the sidebar menu gap

--- a/src/App.scss
+++ b/src/App.scss
@@ -601,8 +601,7 @@ body {
     box-shadow: 0 0 6px 0 #7000FF54;
   }
   &.active {
-    font-weight:700;
-    font-size:14px;
+    border: 1px solid #B67CFF;
   }
 }
 
